# Kursovay_OOP_HH

./: .gitignore  README.md  config.py  main.py  pyproject.toml
data/: vacancies.json  vacancies_all.json  vacancies_update.json
src/: HH.py  HeadHunterAPI.py  add_vacancies_in_json.py  getting_and_working_with_vacancies.py  headhunterapi.py  jsonsaver.py  vacancy.py
tests/: test_vacancy.py
