[tool.poetry]
name = "kursovay-oop-hh"
version = "0.1.0"
description = ""
authors = ["Olonov Aleksandr <adrolv08111985@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.13.*"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
